--- a/output/archives.html
+++ b/output/archives.html
@@ -18,6 +18,10 @@
 <h1>Archives for My website</h1>
 
 <dl>
+    <dt>周六 09 十月 2021</dt>
+    <dd><a href="/my-third-article.html">My Third Article</a></dd>
+    <dt>周六 09 十月 2021</dt>
+    <dd><a href="/my-second-article.html">My Second Article</a></dd>
     <dt>周一 07 一月 2019</dt>
     <dd><a href="/my-first-article.html">My First Article</a></dd>
 </dl>
